# c_forever

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: example.c
include/: forever.h
src/: forever.c
tests/: test.c  test.h  test_callback_multiple_retries.c  test_callback_with_context.c  test_options_multiple_retries.c  test_options_single_retry.c  test_options_with_context.c  test_options_with_delay.c
